[package]
name = "rs-web-socket"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
tokio = { version = "1.36.0", features = ["full"] }
futures-channel = "0.3"
futures-util = "0.3"
